# MultifunCamera

MultifunCamera/Camera/: import-summary.txt  settings.gradle
MultifunCamera/Camera/app/: CMakeLists.txt  build.gradle
MultifunCamera/Camera/app/src/androidTest/java/com/example/camera/: ExampleInstrumentedTest.java
MultifunCamera/Camera/app/src/main/: AndroidManifest.xml
MultifunCamera/Camera/app/src/main/cpp/: USBCamera.cpp  USBCamera.h  V4L2Buffer.cpp  V4L2Buffer.h  V4l2Capture.cpp  V4l2Capture.h  V4l2Device.cpp  V4l2Device.h  function-camera.cpp
MultifunCamera/Camera/app/src/main/cpp/include/libavcodec/: avcodec.h
MultifunCamera/Camera/app/src/main/cpp/include/libavformat/: avformat.h
MultifunCamera/Camera/app/src/main/cpp/include/libavutil/: avutil.h  ffversion.h  macros.h  mem.h
MultifunCamera/Camera/app/src/main/cpp/include/libyuv/: convert.h  convert_argb.h
MultifunCamera/Camera/app/src/main/cpp/utils/: Logger.h  V4l2Utils.cpp  V4l2Utils.h  nv12toargb.cpp
MultifunCamera/Camera/app/src/main/java/com/example/camera/: CameraDemoApplication.java  MainActivity.java
MultifunCamera/Camera/app/src/main/java/com/example/camera/camera/: CameraCallback.java  CameraCallbackPreviewListener.java  CameraConfig.java  CameraFromJNI.java  CameraGL20Renderer.java  CameraGLSurfaceView.java  CameraId.java  CameraRotate.java  CameraType.java  FpsUtils.java  FunctionCamera.java  ScaleType.java  SystemCamera.java  YUVDecoder.java
MultifunCamera/Camera/app/src/main/java/com/example/camera/utils/: BitmapTools.java
MultifunCamera/Camera/app/src/main/res/layout/: activity_main.xml
MultifunCamera/Camera/gradle/wrapper/: gradle-wrapper.properties
MultifunCamera/Camera/openCVLibrary310/: build.gradle
lib/lib/: lib.h  lib.m
lib/lib.xcodeproj/: project.pbxproj
lib/lib.xcodeproj/project.xcworkspace/xcuserdata/zhangxinjun.xcuserdatad/: UserInterfaceState.xcuserstate
lib/lib.xcodeproj/xcuserdata/zhangxinjun.xcuserdatad/xcschemes/: lib.xcscheme  xcschememanagement.plist
lib/libTests/: Info.plist
